// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sxfmvn9 {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sxfmvn9:focus,
.sxfmvn9:hover {
  color: var(--sx-colors-tertiary);
  text-decoration: underline;
}

.sxfmvn9:active {
  color: var(--sx-colors-primary);
}

.sxgpjqn > .sxfmvn9,
.sxyi5a5 > .sxfmvn9,
.sx03kze > .sxfmvn9 {
  font-size: 100%;
  line-height: 1;
}

.sxgpjqn > .sxfmvn9::before,
.sxgpjqn > .sxfmvn9::after,
.sxyi5a5 > .sxfmvn9::before,
.sxyi5a5 > .sxfmvn9::after,
.sx03kze > .sxfmvn9::before,
.sx03kze > .sxfmvn9::after {
  content: none;
}

.sxfmvn9ryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxfmvn9ryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxfmvn9ryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

<div>
  <a
    class="sxfmvn9 sxfmvn9ryo8u--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sxfmvn9 {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sxfmvn9:focus,
.sxfmvn9:hover {
  color: var(--sx-colors-tertiary);
  text-decoration: underline;
}

.sxfmvn9:active {
  color: var(--sx-colors-primary);
}

.sxgpjqn > .sxfmvn9,
.sxyi5a5 > .sxfmvn9,
.sx03kze > .sxfmvn9 {
  font-size: 100%;
  line-height: 1;
}

.sxgpjqn > .sxfmvn9::before,
.sxgpjqn > .sxfmvn9::after,
.sxyi5a5 > .sxfmvn9::before,
.sxyi5a5 > .sxfmvn9::after,
.sx03kze > .sxfmvn9::before,
.sx03kze > .sxfmvn9::after {
  content: none;
}

.sxfmvn9ryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxfmvn9ryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxfmvn9ryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sxfmvn9g0h8h--size-lg {
  font-size: var(--sx-fontSizes-lg);
  line-height: 1.52;
}

.sxfmvn9g0h8h--size-lg::before {
  content: '';
  margin-bottom: -0.3983em;
  display: table;
}

.sxfmvn9g0h8h--size-lg::after {
  content: '';
  margin-top: -0.3983em;
  display: table;
}

<div>
  <a
    class="sxfmvn9 sxfmvn9g0h8h--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
